<resources>
    <string name="app_name">LibraryApp2.0</string>
    <string name="client_account">Client Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address_locked">Email Address (Locked)</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="home_address">Home Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="welcome_admin_get_to_work">Welcome Admin! GET TO WORK!</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_books">Manage Books</string>
    <string name="view_reports">View Reports</string>
    <string name="log_out">Log Out</string>
    <string name="book_status">Book Status</string>
    <string name="search_by_title_or_author">Search by Title or Author...</string>
    <string name="library_manager">Library Manager</string>
    <string name="welcome_guest_and_loser">Welcome, Guest and Loser!</string>
    <string name="my_profile">My Profile</string>
    <string name="reserve_book">Reserve Book</string>
    <string name="lost_amp_found"><![CDATA[Lost & Found]]></string>
    <string name="lockers">Lockers</string>
    <string name="pay_fines">Pay Fines</string>
    <string name="report_issue">Report Issue</string>
    <string name="login_admin_access">Login / Admin Access</string>
    <string name="pay_at_counter">Pay at Counter</string>
    <string name="pay_online_via_maybank2u">Pay Online via Maybank2u</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account_login_idiot">Already have an account? Login, Idiot!</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="describe_your_problem_or_feedback_below">Describe your problem or feedback below:</string>
    <string name="type_here_please_also_add_in_your_email_address">Type here... (Please also add in your email address).</string>
    <string name="submit_report">Submit Report</string>
    <string name="book_reservation">Book Reservation</string>
    <string name="reserve">Reserve</string>
    <string name="author_name">Author Name</string>
    <string name="available">Available</string>
    <string name="book_title">Book Title</string>
    <string name="_101">#101</string>
    <string name="claim">CLAIM</string>
    <string name="found_12_oct_2023">Found: 12 Oct 2023</string>
    <string name="blue_water_bottle">Blue Water Bottle</string>
    <string name="loc_reading_area_b">Loc: Reading Area B</string>
</resources>