<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/cyan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_an_issue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="#333"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_your_problem_or_feedback_below"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etReportIssue"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:drawable/edit_text"
        android:gravity="top|start"
        android:hint="@string/type_here_please_also_add_in_your_email_address"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnSubmitReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_report"
        android:backgroundTint="#F44336"
        android:textColor="#FFF"/>

</LinearLayout>